<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2015 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="droidsettings"
    android:title="@string/settings_app_name" >

    <Preference
        android:fragment="com.hardkernel.odroid.settings.update.UpdateFragment"
        android:icon="@drawable/ic_system_update"
        android:key="update"
        android:title="@string/update" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.cpungpu.CpunGpuFragment"
        android:icon="@drawable/ic_settings_more"
        android:key="cpungpu"
        android:title="@string/cpungpu" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.rotation.RotationFragment"
        android:icon="@drawable/ic_sync"
        android:key="rotation"
        android:title="@string/rotation" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.display.DisplayFragment"
        android:icon="@drawable/ic_settings_display"
        android:key="display"
        android:title="@string/device_display" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.HdmiFragment"
        android:icon="@drawable/ic_hdmi"
        android:key="hdmi"
        android:title="@string/hdmi" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.SoundFragment"
        android:icon="@drawable/ic_volume_up"
        android:key="mbox_sound"
        android:title="@string/device_sound" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.VideoEncoderFragment"
        android:icon="@drawable/ic_encoder"
        android:key="video_encoder"
        android:title="@string/encoder_title" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.PowerKeyActionDefinitionFragment"
        android:icon="@drawable/ic_settings_power"
        android:key="powerkey_action"
        android:title="@string/system_powerkeyaction" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.shortcut.ShortcutFragment"
        android:icon="@drawable/ic_app_shortcut"
        android:key="shortcut"
        android:title="@string/app_shortcut"
        />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.EthernetSettingsFragment"
        android:icon="@drawable/ic_menu_ethernet"
        android:key="misc"
        android:title="@string/ethernet_settings" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.HeartBeatFragment"
        android:icon="@drawable/heartbeat_icon"
        android:key="led"
        android:title="@string/led" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.KioskFragment"
        android:icon="@drawable/kiosk_icon"
        android:key="kiosk"
        android:title="@string/kiosk" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.dtbo.DTBOverlayFragment"
        android:icon="@drawable/dtb_overlay_icon"
        android:key="dtbo"
        android:title="@string/overlay_title" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.MouseAccelFragment"
        android:icon="@drawable/mouse_accel"
        android:key="mouse_accel"
        android:title="@string/mouse_accel" />
    <Preference
        android:fragment="com.hardkernel.odroid.settings.BluetoothFragment"
        android:icon="@drawable/ic_bluetooth"
        android:key="bluetooth"
        android:title="@string/bluetooth" />
    <Preference
        android:icon="@drawable/ic_info_outline"
        android:key="netflix_esn"
        android:title="@string/netflix_esn"/>
    <Preference
        android:icon="@drawable/ic_settings_more"
        android:key="more"
        android:title="@string/system_more_setting" >
        <intent
            android:targetClass="com.android.settings.Settings"
            android:targetPackage="com.android.settings" />
    </Preference>
</PreferenceScreen>
